# CifrulBiblic

./: .gitignore  Expresia_Fiul_Omului_Biblia_Ortodoxa.html  LICENSE  Makefile  README.md  abstract_open_theology.md  articol_open_theology.tex  bib_to_html.py  bibliografie_html.html  blood_moon.py  blood_moon_horizons.py  carte.bbl  carte.bib  carte.html  carte.tex  fara_buton.html  halley_66ad.py  halley_horizons.py  html2latex.py  inventory.py  mcdonald_eutychus_elpenor.html  merge_gia_bibs.py
biblegematria/: AUTHORS  LICENSE  LICENSES  MANUAL.md  README.md  numbers.py  numbers.txt  pyproject.toml  requirements.txt  scan.py  scan_lxx.py
biblegematria/biblegematria/: __init__.py  ciphers.py  combo.py  crosslang.py  download.py  gematria.py  lexicon.py  lexicon_ro.json  lexicon_ro.xlsx  numbers.py  romanian.py  strongs_greek.json  strongs_ro.json  synonyms_ro.json  texts.py
biblegematria/biblegematria.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lxx/: 1Chr.js  1Esd.js  1Kgs.js  1Macc.js  1Sam.js  2Chr.js  2Esd.js  2Kgs.js  2Macc.js  2Sam.js  3Macc.js  4Macc.js  Amos.js  Bar.js  Bel.js  BelTh.js  Dan.js  DanTh.js  Deut.js  Eccl.js  EpJer.js  Esth.js  Exod.js  Ezek.js  Gen.js  Hab.js  Hag.js  Hos.js  Isa.js  Jdt.js  Jer.js  Job.js  Joel.js  Jonah.js  Josh.js  JoshA.js  Judg.js  JudgA.js  Lam.js  Lev.js  (+20 more)
retroversion_work/: analyze_retroversion.py  atbash_1letter_residue.py  atbash_3letter_top.py  atbash_pair_filter_theo.py  atbash_pair_scan.py  atbash_pair_scan_v2.py  atbash_residue_length.py  atbash_zero_residue.py  atbash_zero_residue.xlsx  (+18 more)
(+45 files in other folders)
